--- a/.github/workflows/gitartwork.yml
+++ b/.github/workflows/gitartwork.yml
@@ -14,5 +14,5 @@
             # Use this username's contribution graph  
             user_name: AdamsGeeky
             # Text on contribution graph 
-            text: ADAMSGEEKY
+            text: A. GEEKY
        - uses: jasineri/simple-push-action@v1
